--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Homework 2</title>
     </head>
     <body>
-        Hello
+        <h1>Homework 2</h1>
+        <h2>Victor Hoppenot</h2>
     </body>
 </html>
