--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Homework 2</h1>
         <h2>Victor Hoppenot</h2>
+        <img src="./Pitt County Boundaries.png" alt="Victor Hoppenot">
     </body>
 </html>
