--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Homework 2</title>
+        <style>
+            img {
+                width: min(100vw,100vh);
+                height: auto;
+            }
+        </style>
     </head>
     <body>
         <h1>Homework 2</h1>
         <h2>Victor Hoppenot</h2>
-        <img src="./Pitt County Boundaries.png" alt="Victor Hoppenot">
+        <img src="./Pitt County Boundaries.png">
+        <p>
+            <a href="https://data-ncdenr.opendata.arcgis.com/datasets/majorhydro/explore?location=35.121320%2C-78.255099%2C7.90"><strong>NC Rivers Shapefile:</strong></a>
+
+        </p>
+        <p>
+            <a href="https://catalog.data.gov/dataset/tiger-line-shapefile-2016-county-pitt-county-nc-address-range-feature-county-based"><strong>Pitt County Roads Shapefile:</strong></a>
+
+        </p>
+        <p>
+            <a href="https://map-pittnc.opendata.arcgis.com/datasets/PittNC::pitt-county-precincts/explore?location=35.580079%2C-77.391900%2C11.58"><strong>Pitt County Precincts Shapefile:</strong></a>
+
+        </p>
+        <p>
+            <a href="https://map-pittnc.opendata.arcgis.com/datasets/PittNC::pitt-county-city-limits/explore?location=35.591303%2C-77.413550%2C11.71"><strong>Pitt County City Limits Shapefile:</strong></a>
+
+        </p>
+        <p>
+            <a href="https://data-ncdenr.opendata.arcgis.com/datasets/majorhydro/explore?location=35.121320%2C-78.255099%2C7.90"><strong>NC Rivers Shapefile:</strong></a>
+
+        </p>
+        <p>
+            <a href="https://github.com/victorhoppenot/GEOG370-HW2/GeoJSON">GeoJSON</a>
+        </p>
     </body>
 </html>
