Added Pitt County Public Schools

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         </p>
         <p>
-            <a href="https://data-ncdenr.opendata.arcgis.com/datasets/majorhydro/explore?location=35.121320%2C-78.255099%2C7.90"><strong>NC Rivers Shapefile:</strong></a>
+            <a href="https://map-pittnc.opendata.arcgis.com/datasets/PittNC::pitt-county-public-school-locations/explore?location=35.588875%2C-77.379150%2C11.78"><strong>Pitt County Public Schools Shapefile:</strong></a>
 
         </p>
         <p>
