fix wrong image glitch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <h1>Homework 2</h1>
         <h2>Victor Hoppenot</h2>
-        <img src="./Pitt County Boundaries.png">
+        <img src="./Pitt County.png">
         <p>
             <a href="https://data-ncdenr.opendata.arcgis.com/datasets/majorhydro/explore?location=35.121320%2C-78.255099%2C7.90"><strong>NC Rivers Shapefile:</strong></a>
 
