reorganization and upload of hw4

--- a/index.html
+++ b/index.html
@@ -1,42 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Homework 2</title>
-        <style>
-            img {
-                width: min(100vw,100vh);
-                height: auto;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Homework 2</h1>
-        <h2>Victor Hoppenot</h2>
-        <img src="./Pitt County.png">
-        <p>
-            <a href="https://data-ncdenr.opendata.arcgis.com/datasets/majorhydro/explore?location=35.121320%2C-78.255099%2C7.90"><strong>NC Rivers Shapefile:</strong></a>
-
-        </p>
-        <p>
-            <a href="https://catalog.data.gov/dataset/tiger-line-shapefile-2016-county-pitt-county-nc-address-range-feature-county-based"><strong>Pitt County Roads Shapefile:</strong></a>
-
-        </p>
-        <p>
-            <a href="https://map-pittnc.opendata.arcgis.com/datasets/PittNC::pitt-county-precincts/explore?location=35.580079%2C-77.391900%2C11.58"><strong>Pitt County Precincts Shapefile:</strong></a>
-
-        </p>
-        <p>
-            <a href="https://map-pittnc.opendata.arcgis.com/datasets/PittNC::pitt-county-city-limits/explore?location=35.591303%2C-77.413550%2C11.71"><strong>Pitt County City Limits Shapefile:</strong></a>
-
-        </p>
-        <p>
-            <a href="https://map-pittnc.opendata.arcgis.com/datasets/PittNC::pitt-county-public-school-locations/explore?location=35.588875%2C-77.379150%2C11.78"><strong>Pitt County Public Schools Shapefile:</strong></a>
-
-        </p>
-        <p>
-            <a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/GeoJSON">GeoJSON</a>
-        </p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Victor Hoppenot - GEOG 370</title>
+</head>
+<body>
+<a href="./HW2/index.html"><h1>HW2</h1></a>
+<a href="./HW3/index.html"><h1>HW3</h1></a>
+<a href="./HW4/index.html"><h1>HW4</h1></a>
+</body>
 </html>
