--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <a href="./HW3/index.html"><h1>HW3</h1></a>
 <a href="./HW4/index.html"><h1>HW4</h1></a>
 <a href="./HW5/index.html"><h1>HW5</h1></a>
+<a href="./HW6/index.html"><h1>HW6</h1></a>
 </body>
 </html>
