Convert Shapefile to GEOJSON

--- a/HW6/index.html
+++ b/HW6/index.html
@@ -14,7 +14,7 @@
 <body>
     <img src="./Cali.png">
     <h2>Data used for this project:</h2>
-    <a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW6/shp">Shapefile</a>
+    <a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW6/california.geojson">Shapefile</a>
     <br>
     <a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW6/median_income.csv">CSV dataset</a>
 </body>
