--- a/HW8/index.html
+++ b/HW8/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <img src="./class.png">
-    <p>Insert Description</p>
+    <p>This map provides information on the largest private industries by employment in each county in the continental United States. The industries are categorized based off OSHA SIC Divisons. Mutliple datasets were obtained from the BLS QCEW and merged using Python and Pandas.</p>
     <h1>Data used for this project:</h1>
     <h2><a href="https://data.bls.gov/cew/apps/data_views/data_views.htm#tab=Tables">Raw data generated from BLS QCEW tables</a></h2>
     <h2><a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW8/Employment_By_Industry.csv">Cleaned data using Python and Pandas</a></h2>
