--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <a href="./HW6/index.html"><h1>HW6</h1></a>
 <a href="./HW7/index.html"><h1>HW7</h1></a>
 <a href="./HW8/index.html"><h1>HW8</h1></a>
+<a href="./HW9/index.html"><h1>HW9</h1></a>
 </body>
 </html>
