Fixed hw9 image

--- a/HW9/index.html
+++ b/HW9/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <img src="./hw9.png">
+    <img src="./Hw9.png">
     <h1>Data used for this project:</h1>
     <h2><a href="https://www.sciencebase.gov/catalog/item/4fb55df0e4b04cb937751e02">North American Hydrology</a></h2>
     <h2><a href="https://www.naturalearthdata.com/downloads/10m-cultural-vectors/">World Urban Areas</a></h2>
