--- a/HW8/index.html
+++ b/HW8/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>US County Employer</title>
+    <title>Hydrology and Urban Areasr</title>
     <style>
         img {
             width: min(100vh,100vw);
@@ -12,12 +12,9 @@
     </style>
 </head>
 <body>
-    <img src="./class.png">
-    <p>This map provides information on the largest private industries by employment in each county in the continental United States. The industries are categorized based off OSHA SIC Divisons. Mutliple datasets were obtained from the BLS QCEW and merged using Python and Pandas.</p>
+    <img src="./Hw8.png">
     <h1>Data used for this project:</h1>
-    <h2><a href="https://data.bls.gov/cew/apps/data_views/data_views.htm#tab=Tables">Raw data generated from BLS QCEW tables</a></h2>
-    <h2><a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW8/Employment_By_Industry.csv">Cleaned data using Python and Pandas</a></h2>
-    <h2><a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW8/data">Script and raw data</a></h2>
-    <h2><a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW8/county_employment.zip">Shapefile (Compressed)</a></h2>
+    <h2><a href="https://www.sciencebase.gov/catalog/item/4fb55df0e4b04cb937751e02">North American Hydrology</a></h2>
+    <h2><a href="https://www.naturalearthdata.com/downloads/10m-cultural-vectors/">World Urban Areas</a></h2>
 </body>
 </html>
