--- a/HW7/index.html
+++ b/HW7/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>California White People</title>
+    <title>US County Employer</title>
     <style>
         img {
             width: min(100vh,100vw);
@@ -12,24 +12,12 @@
     </style>
 </head>
 <body>
-    <p>The dataset here represents a ratio between the number of white people in each California county and the total number of people in each California county. This ratio was calculated by dividing the total number of white people by the total number of people in each county. </p>
-    <img src="./Eq_cnt.png">
-    <p>
-        The Equal Count categorization scheme is used here. This means that every color has the same amount of counties associated with it. This scheme shows the data in quantiles rather than intervals. This means that the data is grouped into groups of equal size. This scheme is useful for showing the data in a way that is easy to understand and compare.
-    </p>
-    <img src="./Eq_int.png">
-    <p>
-        The Equal Interval categorization scheme is used here. This means that every color has the same sized interval of values associated with it. This scheme provides the viewer an intuitive sense of the data by setting it such that the intervals are the same size. Therefore, when a color changes, the value changes the same amount.
-
-    </p>
-    <img src="./Pretty.png">
-    <p>
-        The Pretty Breaks categorization scheme is used here. This means that the intervals are chosen to be as even as possible. In this case, that requires such that there are more than 5 colors like in the other two schemes. This scheme makes it easier for people to understand the data by grouping in values that people are familliar with.
-    </p>
-    <h2>Data used for this project:</h2>
-    <a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW7/california.geojson">Shapefile</a>
-    <br>
-    <a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW7/white_people_c_pop.csv">CSV dataset</a>
-
+    <img src="./class.png">
+    <p>This map provides information on the largest private industries by employment in each county in the continental United States. The industries are categorized based off OSHA SIC Divisons. Mutliple datasets were obtained from the BLS QCEW and merged using Python and Pandas.</p>
+    <h1>Data used for this project:</h1>
+    <h2><a href="https://data.bls.gov/cew/apps/data_views/data_views.htm#tab=Tables">Raw data generated from BLS QCEW tables</a></h2>
+    <h2><a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW8/Employment_By_Industry.csv">Cleaned data using Python and Pandas</a></h2>
+    <h2><a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW8/data">Script and raw data</a></h2>
+    <h2><a href="https://github.com/victorhoppenot/GEOG370-HW2/tree/main/HW8/county_employment.zip">Shapefile (Compressed)</a></h2>
 </body>
-</html> 
+</html>
