--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <a href="./HW3/index.html"><h1>HW3</h1></a>
 <a href="./HW4/index.html"><h1>HW4</h1></a>
 <a href="./HW5/index.html"><h1>HW5</h1></a>
-<a href="./HW6/index.html"><h1>HW6</h1></a>
+<a href="./HW6/index.html"><h1>HW6 (part 1)</h1></a>
+<a href="./HW6-2/index.html"><h1>HW6 (part 2)</h1></a>
 <a href="./HW7/index.html"><h1>HW7</h1></a>
 <a href="./HW8/index.html"><h1>HW8</h1></a>
-<a href="./HW9/index.html"><h1>HW9</h1></a>
 </body>
 </html>
